--- a/Diabetes_Classification.ipynb
+++ b/Diabetes_Classification.ipynb
@@ -17,14 +17,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "v7FHl5TU3JDh",
         "scrolled": true
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv(r'D:\\Education\\Coding\\Machine Learning\\Machine Learning Projects\\Diabetes Classification\\diabetes.csv')"
+        "df = pd.read_csv('diabetes.csv')"
       ]
     },
     {
